--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ html, body {
   font-family: 'Open Sans', sans-serif;
   background-image: url('https://alternatethinking-site.github.io/site/assets/cs-1.webp');
   background-size: cover;
+  filter: opacity(0.20)
 }
 
 .cs-wrapper {
@@ -75,5 +76,5 @@ html, body {
 .cs-wrapper h1 {
   text-transform: uppercase;
   font-size: 48px;
-  color: whitesmoke;
+  color: red;
 }
