--- a/styles.css
+++ b/styles.css
@@ -1,79 +1,16 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain)
-*/
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
-}
-
-/* Coming Soon page styles */
 html, body {
   width: 100%;
   height: 100%;
 }
 
-.wrapper {
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  font-family: 'Open Sans', sans-serif;
-  background-image: url('https://alternatethinking-site.github.io/site/assets/cs-1.png');
-  background-size: cover;
+.hero {
+  min-height: 75vh;
 }
 
-.cs-wrapper {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -135px;
-  margin-left: -175px;
-  max-width: 600px;
-  line-height: 80px;
-}
-
-.cs-wrapper h1 {
-  text-transform: uppercase;
-  font-size: 48px;
-  color: black;
+.divider {
+  height: 3rem;
+  background-color: rgba(0, 0, 0, .1);
+  border: solid rgba(0, 0, 0, .15);
+  border-width: 1px 0;
+  box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
 }
