--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ html, body {
 }
 
 .background-image {
-  background-image: url('/assets/background.jpg')
+  background-image: url('/assets/background.jpg');
+  background-size: contain;
 }
 
 .divider {
