--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,8 @@ html, body {
 
 .background-image {
   background-image: url('/assets/background.jpg');
-  background-size: contain;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 
 .divider {
